# payment-engine

./: .gitignore  Cargo.toml  README.md  flake.nix  test_samples.sh
proptest-regressions/: client.txt  transaction.txt
samples/: generate_large_sample.py
samples/chargeback/: input.csv  output.csv
samples/complex_scenario/: input.csv  output.csv
samples/decimal_precision/: input.csv  output.csv
samples/dispute_resolve/: input.csv  output.csv
samples/edge_cases/: input.csv  output.csv
samples/empty_amounts/: input.csv  output.csv
samples/insufficient_funds/: input.csv  output.csv
samples/multiple_clients/: input.csv  output.csv
src/: account.rs  client.rs  lib.rs  main.rs  transaction.rs
