[package]
name = "payment-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bit-set = "0.8.0"
csv = "1.3.1"
fastnum = { version = "0.7.1", features = ["serde"] }
serde = "1.0.225"


[dev-dependencies]
proptest = "1.7.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
